Fix: Fix the issue of overlapping divs

--- a/css/index.css
+++ b/css/index.css
@@ -134,9 +134,6 @@ html {
 html,
 body {
   font-family: 'Ubuntu', sans-serif;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
 }
 h1,
 h2,
@@ -155,6 +152,11 @@ h3 {
 p {
   font-size: 1.6rem;
   line-height: 1.4;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
 }
 .main-header {
   z-index: 999;
@@ -233,7 +235,7 @@ p {
 .search-section .searchpane input {
   border: 1px solid black;
   width: 70%;
-  height: 100%;
+  height: 50px;
   margin-left: 1.5rem;
   text-align: center;
   font-size: 1.5rem;
@@ -241,7 +243,7 @@ p {
 .search-section .searchpane button {
   border: 1px solid #6200EE;
   width: 20%;
-  height: 100%;
+  height: 50px;
   margin-right: 1.5rem;
   background: #6200EE;
   vertical-align: top;
@@ -252,6 +254,7 @@ p {
 .interests {
   margin-top: 2rem;
   position: relative;
+  height: 750px;
 }
 .interests .intro-note h1 {
   font-size: 2.5rem;
@@ -292,4 +295,22 @@ p {
   color: grey;
   display: block;
   margin-bottom: 2rem;
+}
+.feature-section {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  border: 1px solid red;
+  margin-top: 40%;
+}
+.feature-section .feature {
+  background-color: grey;
+}
+.feature-section .feature .img {
+  width: 50%;
+  height: 50%;
+}
+.feature-section .feature .img img {
+  width: 50%;
+  height: 30%;
 }
