--- a/interests-section/interests.less
+++ b/interests-section/interests.less
@@ -1,47 +1,48 @@
 .interests {
-    margin-top: @medium-margin;
-    position: relative;
+  margin-top: @medium-margin;
+  position: relative;
+  height: 750px;
 
-    .intro-note {
-        h1 {
-            font-size: @xmedium-font;
-            text-align: center;
-            color: rgb(78, 76, 76);
-        }
-        p {
-            text-align: center;
-            color: grey;
-            padding-top: @small-padding;
-        }
+  .intro-note {
+    h1 {
+      font-size: @xmedium-font;
+      text-align: center;
+      color: rgb(78, 76, 76);
     }
-
-    .interest-grid {
-        position: absolute;
-        .flex-mixin(row);
-        flex-wrap: wrap;
-        justify-content: center;
-        margin: 3.0rem 1.0rem;
-        .interest {
-            .flex-mixin(column);
-            align-items: center;
-            width: 40%;
-            margin: 0.5rem;
-            box-shadow: 0 4px 8px 0 rgb(78, 76, 76), 0 6px 20px 0 rgb(78, 76, 76);
-            .img {
-                width: 100%;
-                margin: 2.0rem;
-                flex: 2;
-
-                img {
-                    width: 100%;
-                    margin: 2.0rem auto;
-                }
-            }
-             p {
-                color: grey;
-                display: block;
-                margin-bottom: 2.0rem;
-             }
-        }
+    p {
+      text-align: center;
+      color: grey;
+      padding-top: @small-padding;
     }
+  }
+
+  .interest-grid {
+    position: absolute;
+    .flex-mixin(row);
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 3rem 1rem;
+    .interest {
+      .flex-mixin(column);
+      align-items: center;
+      width: 40%;
+      margin: 0.5rem;
+      box-shadow: 0 4px 8px 0 rgb(78, 76, 76), 0 6px 20px 0 rgb(78, 76, 76);
+      .img {
+        width: 100%;
+        margin: 2rem;
+        flex: 2;
+
+        img {
+          width: 100%;
+          margin: 2rem auto;
+        }
+      }
+      p {
+        color: grey;
+        display: block;
+        margin-bottom: 2rem;
+      }
+    }
+  }
 }
