--- a/less/global.less
+++ b/less/global.less
@@ -9,8 +9,6 @@
   
   html, body {
     font-family: 'Ubuntu', sans-serif;
-    .flex-mixin(column);
-    height: 100vh;
   }
   
   h1, h2, h3, h4, h5 {
@@ -32,4 +30,7 @@
   }
   
   
-  
+  .container {
+    .flex-mixin(column);
+    position: absolute;
+  }
