--- a/search-section/search-section.less
+++ b/search-section/search-section.less
@@ -27,7 +27,7 @@
         input {
             border: 1px solid black;
             width: 70%;
-            height: 100%;
+            height: 50px;
             margin-left: @small-margin;
             text-align: center;
             font-size: @small-margin;
@@ -36,7 +36,7 @@
             // add boxshadow effect
             border: 1px solid @primary-color;
             width: 20%;
-            height: 100%;
+            height: 50px;
             margin-right: @small-margin;
             background: @primary-color;
             vertical-align: top;
